# Growth_Mindset_Challenge

./: pyproject.toml
explanation/: code_explanation.md
src/growth_mindset_challenge/: app.py
