[project]
name = "growth-mindset-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fasih", email = "programmer.fasih.18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
    "xlsxwriter>=3.2.2",
]

[project.scripts]
growth-mindset-challenge = "growth_mindset_challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
